# smart-attendance

./: .gitignore  Instructions.md  README.md  alembic.ini  launch.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a82fc437863e_setup_models.py
app/: main.py
app/api/v1/: attendance.py  auth.py  reports.py
app/core/: database.py  ui.py
app/models/: database.py  models.py
app/schemes/: attendance.py
backend/: db_conn.py
backend/routes/: admin.py  attendance.py  auth.py
db/: compose.yaml
nginx/: compose.yaml
nginx/conf.d/: server.conf
static/: display.html  display.js  index.html  index.js
static/js/: display.js  index.js  reports.js
templates/: admin.html  dashboard.html  default.html  display.html  index.html  login.html  masters.html
