[project]
name = "smart-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mysql-connector-python>=9.6.0",
    "pandas>=3.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.2",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.22",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
